--- a/ui/src/components/common/SlidingSidebar/partials/VertexDetails/partials/Errors/style.css
+++ b/ui/src/components/common/SlidingSidebar/partials/VertexDetails/partials/Errors/style.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow-x: hidden;
 }
 
 .vertex-dropdown-title {
@@ -18,7 +19,9 @@
   padding: 4rem;
   margin-top: 0;
   height: 100%;
-  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 .vertex-errors-selector-dropdown {
